fix a bug in which developer description overlaps the pic on low-res monitor

--- a/django-website/wheelie/client/scss/base/_media-queries.scss
+++ b/django-website/wheelie/client/scss/base/_media-queries.scss
@@ -6,4 +6,6 @@ $medium: "only screen and (min-width: 530px) and (max-width: 949px)";
 $large: "only screen and (min-width: 950px) and (max-width: 1128px)";
 $extra-large: "only screen and (min-width: 1129px)";
 
+$big-monitor: "only screen and (min-width: 2000px)";
+
 $small-vh: "only screen and (max-height: 414px)";
